force-app/main/default/objects/HmK_Return__c/HmK_Return__c.object-meta.xml
<CustomObject>
    <label>HmK_Return</label>
    <nameField>
        <label>HmK_Return</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HmK_Returns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>