force-app/main/default/objects/HmK_Return__c/fields/Item_Check_Needed__c.field-meta.xml
<CustomField>
    <fullName>Item_Check_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Item Check Needed</label>
    <type>Checkbox</type>
</CustomField>