force-app/main/default/objects/HmK_Return__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>HmK_Order__c</referenceTo>
    <relationshipLabel>HmK_Returns</relationshipLabel>
    <relationshipName>HmK_Returns</relationshipName>
    <type>Lookup</type>
</CustomField>