force-app/main/default/objects/HmK_Return__c/fields/Returned__c.field-meta.xml
<CustomField>
    <fullName>Returned__c</fullName>
    <label>Returned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>